# packing_pipeline

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  README.md  main.py  packer_families_table.tex  pyproject.toml
.github/workflows/: generate_stats.yml  sync_manifest.yml
benign_sources/manifest/: processed_ids.json  x64.json  x86.json
doc/: AUTOMATIC_LABELING.md  EMPIRICAL_TYPE_LABELS.md  NAS_CLEANUP_AND_PACKING_SHA_CHECK_PROMPT.md  PACKER_TYPE_LABELS.md  empirical_type_collection.md
docs/: AUTOMATIC_LABELING.md  EMPIRICAL_TYPE_LABELS.md  EMPIRICAL_TYPE_RESULTS.md  empirical_type_collection.md  empirical_type_handoff.md  full_matrix_scope.md  packer_type_labels.md  sok_consensus_methodology.md
empirical_types/: __init__.py  audit.py  classifier.py  cli.py  collector.py  finalize.py  manifest.py  model.py  nas.py  paper.py  protection.py  provisional.py  trace.py  verify.py  workflow.py
manifest/: dataset_stats.json  empirical_types.yaml  empirical_types_acprotect_std_Standard__installer.yaml  empirical_types_alienyze_protector_1.4.yaml  empirical_types_amber.yaml  empirical_types_amber_v2.0_2.0.yaml  empirical_types_armadillo_252b2.yaml  empirical_types_asm_guard_2.9.4.yaml  empirical_types_astral_pe_1.6.0.0.yaml  empirical_types_beroexepacker_1.00.2017.01.27.yaml  empirical_types_enigma_protector_v7.80_7.80_build_20250205.yaml  empirical_types_eronona_1.0.yaml  empirical_types_exe32pack_1.42.yaml  empirical_types_fsg_v1.3_1.3.yaml  empirical_types_hackupx_1.00.yaml  empirical_types_hyperion.yaml  empirical_types_jdpack_v1.00_1.00.yaml  empirical_types_kkrunchy.yaml  empirical_types_kkrunchy_v0.23a2_0.23_alpha_2.yaml  empirical_types_kkrunchy_v0.23a_0.23_alpha.yaml  empirical_types_matrix.yaml  empirical_types_mew_1.1_SE.yaml  empirical_types_molebox_4.6000.yaml  empirical_types_mpress_v1.27_1.27.yaml  empirical_types_mpress_v2.19_2.19.yaml  empirical_types_npack_v1.1_1.1.300.2006.yaml  empirical_types_nspack_v3.7_3.7.yaml  empirical_types_obsidium_v1.5.2_1.5.2.11.yaml  empirical_types_obsidium_v1.8.8_1.8.8.10.yaml  empirical_types_packman_1.0.yaml  empirical_types_pe_diminisher_0.1.yaml  empirical_types_pecompact_v1.84_1.84.yaml  empirical_types_pelock_v2.40_2.40.yaml  empirical_types_pepacker_v1.0_1.0.yaml  empirical_types_petite_v2.2_2.2.yaml  empirical_types_petite_v2.3_2.3.yaml  empirical_types_petite_v2.4_2.4.yaml  empirical_types_pezor.yaml  empirical_types_pezor_3.3.0.yaml  empirical_types_rlpack_1.21_Basic.yaml  (+74 more)
ops/: recover_drakrun_vm.sh
ops/panda/: autologon.reg  build_guest_launcher.sh  guest_launcher.c  hook_replay.py  inspect_replay.py  kernel_events.py  live_trace.py  panda_pilot_live.reg  pilot_startup.cmd  trace_replay.py  (+1 more)
tests/: test_audit.py  test_classifier.py  test_collector.py  test_finalize.py  test_nas.py  test_nas_cleanup.py  test_packer_runner_tuple.py  test_paper.py  test_provisional.py  test_qemu_validation.py  test_retries.py  test_sha_gate.py  test_verify.py  test_workflow.py
utils/: beningn_source_downloader.py  binary_info.py  dataset_stats.py  extract_and_verify.py  make_final_csv.py  nas_cleanup.py  pack_verifier.py  packer_runner.py  sha_gate.py  update_manifest.py  zip_samples.py
wrapper/: Air Explorer_5.9.0_Machine_X86_nullsoft_en-US.exe.asmg  acprotect.py  alienyze.py  alienyze_protector.py  armadillo.py  asm_guard.py  asm_guard_wrapper.py  base_gui.py  base_gui_wrapper.py  fsg.py  gui_runner.py  gui_wrapper_runner.py  jdpack.py  mew.py  npack.py  nspack.py  obsidium_v152_gui.py  obsidium_v1880_gui.py  packman.py  pecompact.py  ped.py  pelock.py  pezor_wrap.sh  rlpack.py  shrinker.py  telock.py  themida_gui.py  upx_scrambler.py  wupack.py  xpa_v143_gui.py  yoda_crypter.py  yoda_crypter_v12.py  yoda_protector.py  yoda_protector_v10.py  yoda_protector_v1012.py  yoda_protector_v101_base.py  yoda_protector_v102.py  yoda_protector_v1032.py  yoda_protector_v1033.py  yoda_protector_v103_base.py  (+1 more)
(+40 files in other folders)
