[project]
name = "packer-corpus"
version = "0.1.0"
description = "A reproducible corpus and automation framework for generating packed PE32 executables."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bump-my-version>=1.2.6",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

authors = [
  {name = "codingb3ar", email = "your.email@example.com"}
]

[project.urls]
Repository = "https://github.com/codingb3ar/packer-corpus"

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
