[project]
name = "packer-corpus"
version = "0.1.0"
description = "A reproducible corpus and automation framework for generating packed PE32 executables."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bump-my-version>=1.2.6",
    "pefile>=2024.8.26",
    "pyautogui>=0.9.54",
    "pypackerdetect>=1.1.3",
    "pyperclip>=1.11.0",
    "pywin32>=311; sys_platform == 'win32'",
    "pywinauto>=0.6.9",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.14.13",
    "screeninfo>=0.8.1",
    "smbprotocol>=1.15.0",
    "tqdm>=4.67.1",
    "yara-python>=4.5.4",
]

authors = [
  {name = "codingb3ar", email = "your.email@example.com"}
]

[project.scripts]
packer-types = "empirical_types.cli:main"

[project.urls]
Repository = "https://github.com/codingb3ar/packer-corpus"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["empirical_types"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = ["empirical_results"]

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
